--- a/src/viewer/templates/material/mw-form-question.html
+++ b/src/viewer/templates/material/mw-form-question.html
@@ -1,50 +1,46 @@
 <div class="mw-form-question">
-
     <div class="mw-question-text">
         {{::ctrl.print(ctrl.question.text)}} <span ng-if="ctrl.question.required">*</span>
     </div>
-
     <div class="mw-question-answers" ng-switch="ctrl.question.type">
         <div ng-switch-when="text">
             <md-input-container class="md-block" md-no-float>
-                <input class="form-control" type="text" ng-model="ctrl.questionResponse.answer"  placeholder="{{'mwForm.question.preview.text'|translate}}" ng-required="ctrl.question.required" ng-readonly="ctrl.readOnly">
+                <input class="form-control" type="text" ng-model="ctrl.questionResponse.answer" placeholder="{{'mwForm.question.preview.text'|translate}}" ng-required="ctrl.question.required" ng-readonly="ctrl.readOnly">
             </md-input-container>
         </div>
         <div ng-switch-when="textarea">
             <md-input-container class="md-block" md-no-float>
-                <textarea msd-elastic class="form-control" ng-model="ctrl.questionResponse.answer"  placeholder="{{'mwForm.question.preview.textarea'|translate}}" ng-required="ctrl.question.required" ng-readonly="ctrl.readOnly"></textarea>
+                <textarea msd-elastic class="form-control" ng-model="ctrl.questionResponse.answer" placeholder="{{'mwForm.question.preview.textarea'|translate}}" ng-required="ctrl.question.required" ng-readonly="ctrl.readOnly"></textarea>
             </md-input-container>
         </div>
         <div ng-switch-when="radio">
-            <md-radio-group ng-model="ctrl.questionResponse.selectedAnswer"  ng-required="ctrl.question.required &&!ctrl.isOtherAnswer" ng-disabled="ctrl.readOnly" ng-change="ctrl.selectedAnswerChanged()">
-                <md-radio-button  ng-repeat="answer in ctrl.question.offeredAnswers" aria-label="{{ answer.value }}"  ng-value="answer.id" name="answer-for-question-{{ctrl.question.id}}" ng-readonly="ctrl.readOnly">
+            <md-radio-group ng-model="ctrl.questionResponse.selectedAnswer" ng-required="ctrl.question.required &&!ctrl.isOtherAnswer" ng-disabled="ctrl.readOnly" ng-change="ctrl.selectedAnswerChanged()">
+                <md-radio-button ng-repeat="answer in ctrl.question.offeredAnswers" aria-label="{{ answer.value }}" ng-value="answer.id" name="answer-for-question-{{ctrl.question.id}}" ng-readonly="ctrl.readOnly">
                     {{::ctrl.print(answer.value)}}
                 </md-radio-button>
             </md-radio-group>
             <md-radio-group ng-model="ctrl.isOtherAnswer" ng-change="ctrl.otherAnswerRadioChanged()" ng-disabled="ctrl.readOnly" ng-readonly="ctrl.readOnly">
-                <div layout="row" layout-align="start center" class="mw-question-other-answer"  ng-if="ctrl.question.otherAnswer">
+                <div layout="row" layout-align="start center" class="mw-question-other-answer" ng-if="ctrl.question.otherAnswer">
                     <div>
-                        <md-radio-button  ng-model="ctrl.isOtherAnswer" ng-value="true" name="other-answer-for-question-{{ctrl.question.id}}" ng-disabled="ctrl.readOnly" ng-readonly="ctrl.readOnly">
+                        <md-radio-button ng-model="ctrl.isOtherAnswer" ng-value="true" name="other-answer-for-question-{{ctrl.question.id}}" ng-disabled="ctrl.readOnly" ng-readonly="ctrl.readOnly">
                             <span translate="mwForm.question.preview.otherAnswer">Inna</span>:
                         </md-radio-button>
                     </div>
                     <div>
                         <md-input-container>
-                            <input type="text" name="other-answer-for-question-{{ctrl.question.id}}" ng-model="ctrl.questionResponse.other" class="form-control" ng-disabled="!ctrl.isOtherAnswer || ctrl.readOnly"
-                                   ng-required="ctrl.isOtherAnswer">
+                            <input type="text" name="other-answer-for-question-{{ctrl.question.id}}" ng-model="ctrl.questionResponse.other" class="form-control" ng-disabled="!ctrl.isOtherAnswer || ctrl.readOnly" ng-required="ctrl.isOtherAnswer">
                         </md-input-container>
                     </div>
                 </div>
             </md-radio-group>
         </div>
-
         <div ng-switch-when="checkbox">
             <div class="checkbox" ng-repeat="answer in ::ctrl.question.offeredAnswers" ng-disabled="ctrl.readOnly" ng-readonly="ctrl.readOnly">
-                <md-checkbox name="answer-for-question-{{ctrl.question.id}}" ng-checked="ctrl.questionResponse.selectedAnswers.indexOf(answer.id) != -1" ng-click="ctrl.toggleSelectedAnswer(answer)" ng-disabled="ctrl.readOnly"  ng-readonly="ctrl.readOnly" >
+                <md-checkbox name="answer-for-question-{{ctrl.question.id}}" ng-checked="ctrl.questionResponse.selectedAnswers.indexOf(answer.id) != -1" ng-click="ctrl.toggleSelectedAnswer(answer)" ng-disabled="ctrl.readOnly" ng-readonly="ctrl.readOnly">
                     {{::ctrl.print(answer.value)}}
                 </md-checkbox>
             </div>
-            <div layout="row" layout-align="start center" class="mw-question-other-answer"  ng-if="ctrl.question.otherAnswer">
+            <div layout="row" layout-align="start center" class="mw-question-other-answer" ng-if="ctrl.question.otherAnswer">
                 <md-checkbox name="answer-for-question-{{ctrl.question.id}}" ng-model="ctrl.isOtherAnswer" ng-change="ctrl.otherAnswerCheckboxChanged()" ng-readonly="ctrl.readOnly" ng-disabled="ctrl.readOnly">
                     <span translate="mwForm.question.preview.otherAnswer">Inna</span>:
                 </md-checkbox>
@@ -54,10 +50,10 @@
                     </md-input-container>
                 </div>
             </div>
-            <input type="hidden" ng-model="ctrl.selectedAnswer" ng-required="ctrl.question.required &&!ctrl.isOtherAnswer"/>
+            <input type="hidden" ng-model="ctrl.selectedAnswer" ng-required="ctrl.question.required &&!ctrl.isOtherAnswer" />
         </div>
         <div ng-switch-when="select">
-            <md-input-container >
+            <md-input-container>
                 <md-select ng-disabled="ctrl.readOnly" ng-required="ctrl.question.required" ng-model="ctrl.questionResponse.selectedAnswer">
                     <md-option ng-repeat="answer in ctrl.question.offeredAnswers" ng-value="answer.id">
                         {{::ctrl.print(answer.value)}}
@@ -69,36 +65,33 @@
             <div class="">
                 <table class="mw-data-table mw-no-border" border="0" cellpadding="5" cellspacing="0">
                     <thead>
-                    <tr>
-                        <td></td>
-                        <td ng-repeat="col in ::ctrl.question.grid.cols">
-                            <label>{{::ctrl.print(col.label)}}</label>
-                        </td>
-                    </tr>
-
+                        <tr>
+                            <td></td>
+                            <td ng-repeat="col in ::ctrl.question.grid.cols">
+                                <label>{{::ctrl.print(col.label)}}</label>
+                            </td>
+                        </tr>
                     </thead>
                     <tbody>
-                    <tr ng-repeat="row in ::ctrl.question.grid.rows">
-                        <td>
-                            {{::ctrl.print(row.label)}}
-                        </td>
-                        <td ng-repeat="col in ctrl.question.grid.cols" ng-switch="ctrl.question.grid.cellInputType">
-                            <md-radio-group ng-switch-when="radio" ng-model="ctrl.questionResponse[row.id]"  ng-required="ctrl.question.required" ng-disabled="ctrl.readOnly">
-                                <md-radio-button ng-value="col.id" name="answer-for-question-{{row.id}}" ng-disabled="ctrl.readOnly"></md-radio-button>
-                            </md-radio-group>
-                            <div ng-switch-when="checkbox">
-                                <md-checkbox   ng-model="ctrl.questionResponse[row.id][col.id]" name="answer-for-question-{{row.id}}-{{col.id}}" ng-required="ctrl.question.required"  ng-disabled="ctrl.readOnly"></md-checkbox>
-                            </div>
-
-                            <md-input-container ng-switch-default>
-                                <input ng-attr-type="{{ctrl.question.grid.cellInputType}}" ng-model="ctrl.questionResponse[row.id][col.id]" name="answer-for-question-{{row.id}}-{{col.id}}" ng-required="ctrl.question.required" ng-disabled="ctrl.readOnly">
-                            </md-input-container>
-                        </td>
-                    </tr>
+                        <tr ng-repeat="row in ::ctrl.question.grid.rows">
+                            <td>
+                                {{::ctrl.print(row.label)}}
+                            </td>
+                            <td ng-repeat="col in ctrl.question.grid.cols" ng-switch="ctrl.question.grid.cellInputType">
+                                <md-radio-group ng-switch-when="radio" ng-model="ctrl.questionResponse[row.id]" ng-required="ctrl.question.required" ng-disabled="ctrl.readOnly">
+                                    <md-radio-button ng-value="col.id" name="answer-for-question-{{row.id}}" ng-disabled="ctrl.readOnly"></md-radio-button>
+                                </md-radio-group>
+                                <div ng-switch-when="checkbox">
+                                    <md-checkbox ng-model="ctrl.questionResponse[row.id][col.id]" name="answer-for-question-{{row.id}}-{{col.id}}" ng-required="ctrl.question.required" ng-disabled="ctrl.readOnly"></md-checkbox>
+                                </div>
+                                <md-input-container ng-switch-default>
+                                    <input ng-attr-type="{{ctrl.question.grid.cellInputType}}" ng-model="ctrl.questionResponse[row.id][col.id]" name="answer-for-question-{{row.id}}-{{col.id}}" ng-required="ctrl.question.required" ng-disabled="ctrl.readOnly">
+                                </md-input-container>
+                            </td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
-
         </div>
         <div ng-switch-when="division" class="mw-division-list" ng-form="ctrl.divisionForm">
             <div class="form-inline" style="margin-bottom: 5px" ng-repeat="item in ctrl.question.divisionList">
@@ -111,7 +104,6 @@
                     </md-input-container>
                     <span>{{::ctrl.print(ctrl.question.unit)}}</span>
                 </div>
-
             </div>
             <div class="form-inline" style="margin-bottom: 5px">
                 <div class="form-group">
@@ -121,18 +113,14 @@
                     <md-input-container md-no-float>
                         <input type="number" class="form-control strict-validation" ng-model="ctrl.divisionSum" min="{{ctrl.question.quantity}}" max="{{ctrl.question.quantity}}" style="width: 80px" readonly>
                     </md-input-container>
-                    <span>{{ctrl.question.unit}} <span translate="mwForm.question.division.fromRequiredLabel">z wymaganych</span> <strong>{{ctrl.question.quantity}}</strong> {{ctrl.question.unit}}  <i ng-show="ctrl.divisionForm.$valid" class="fa fa-check" style="color:#008000;"></i></span>
+                    <span>{{ctrl.question.unit}} <span translate="mwForm.question.division.fromRequiredLabel">z wymaganych</span> <strong>{{ctrl.question.quantity}}</strong> {{ctrl.question.unit}} <i ng-show="ctrl.divisionForm.$valid" class="fa fa-check" style="color:#008000;"></i></span>
                 </div>
-
             </div>
-
         </div>
-
         <mw-priority-list ng-switch-when="priority" question-response="ctrl.questionResponse" question="ctrl.question" read-only="ctrl.readOnly"></mw-priority-list>
-
         <div ng-switch-when="number" class="form-inline">
             <md-input-container>
-                <input class="form-control" min="{{ctrl.question.min}}" max="{{ctrl.question.max}}"  type="number" ng-model="ctrl.questionResponse.answer" ng-required="ctrl.question.required" ng-readonly="ctrl.readOnly">
+                <input class="form-control" min="{{ctrl.question.min}}" max="{{ctrl.question.max}}" type="number" ng-model="ctrl.questionResponse.answer" ng-required="ctrl.question.required" ng-readonly="ctrl.readOnly">
             </md-input-container>
         </div>
         <div ng-switch-when="date" class="form-inline">
@@ -156,7 +144,7 @@
             </md-input-container>
         </div>
         <div ng-switch-when="range" class="mw-range">
-            <md-slider min="{{ctrl.question.min}}" max="{{ctrl.question.max}}"  type="range" ng-model="ctrl.questionResponse.answer" ng-required="ctrl.question.required" ng-disabled="ctrl.readOnly"></md-slider>
+            <md-slider min="{{ctrl.question.min}}" max="{{ctrl.question.max}}" type="range" ng-model="ctrl.questionResponse.answer" ng-required="ctrl.question.required" ng-disabled="ctrl.readOnly"></md-slider>
             <strong class="mw-range-value-label">{{ctrl.questionResponse.answer}}</strong>
         </div>
         <div ng-switch-when="url" class="form-inline">
@@ -164,8 +152,12 @@
                 <input class="form-control" type="url" ng-model="ctrl.questionResponse.answer" ng-required="ctrl.question.required" ng-readonly="ctrl.readOnly">
             </md-input-container>
         </div>
+        <div ng-switch-when="file" class="form-inline">
+            <md-input-container>
+                <input class="form-control" multiple type="file" fileread="ctrl.questionResponse.answer" ng-required="ctrl.question.required" ng-readonly="ctrl.readOnly">
+            </md-input-container>
+        </div>
 
+        {{ctrl.questionResponse}}
     </div>
-
 </div>
-
